Few more updates

--- a/dashboards/redneck.erb
+++ b/dashboards/redneck.erb
@@ -2,7 +2,7 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="2" data-sizex="2" data-sizey="1">
-      <div data-id="welcome" data-view="Text" data-title="Redneck Monitor" data-text="Hell yeah! Let see what you got..." data-moreinfo="Protip: Time To Nut Up or Shut up!"></div>
+      <div data-id="welcome" data-view="Text" data-title="Redneck Monitor" data-text="Hell yeah! What are f*** you want ..." data-moreinfo="Protip: Time To Nut Up or Shut up!"></div>
     </li>
   </ul>
 </div>
