Add simple embedded widget

--- a/dashboards/redneck.erb
+++ b/dashboards/redneck.erb
@@ -1,8 +1,11 @@
 <% content_for :title do %>Redneck Dashboard<% end %>
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="2" data-sizex="2" data-sizey="1">
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="welcome" data-view="Text" data-title="Redneck Monitor" data-text="Hell yeah! What are f*** you want ..." data-moreinfo="Protip: Time To Nut Up or Shut up!"></div>
+    </li>
+    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="promo" data-view="Simpleyoutube" data-url="https://www.youtube.com/embed/w8faZ9LRors"></div>
     </li>
   </ul>
 </div>
