--- a/dashboards/redneck.erb
+++ b/dashboards/redneck.erb
@@ -2,10 +2,10 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="welcome" data-view="Text" data-title="Redneck Monitor" data-text="Hell yeah! What are f*** you want ..." data-moreinfo="Protip: Time To Nut Up or Shut up!"></div>
+      <div data-id="welcome" data-view="Text" data-title="Redneck Monitor" data-text="Hell yeah! What the f*** are you looking for ?"></div>
     </li>
-    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="promo" data-view="Simpleyoutube" data-url="https://www.youtube.com/embed/w8faZ9LRors"></div>
+    <li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
+      <div data-id="promo" data-view="Simpleyoutube" data-url="https://www.youtube.com/embed/w8faZ9LRors" data-hint="*time to nut up or shut up"></div>
     </li>
   </ul>
 </div>
