--- a/widgets/simpleyoutube/simpleyoutube.scss
+++ b/widgets/simpleyoutube/simpleyoutube.scss
@@ -1,7 +1,17 @@
 // ----------------------------------------------------------------------------
 // Sass declarations
 // ----------------------------------------------------------------------------
-$background-color:  #ec663c;
 
-$title-color:       rgba(255, 255, 255, 0.7);
 $moreinfo-color:    rgba(255, 255, 255, 0.7);
+
+.widget-simpleyoutube{
+    iframe{
+        box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
+    }
+    .hint {
+      font-size: 12px;
+      color: $moreinfo-color;
+      text-align: right;
+      padding-bottom: 5px;
+    }
+}
