Before metter customiztion

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -36,6 +36,7 @@ $text-danger-color: #fff;
 //-----------------------------------------------------------------------------
 //Customiztion
 //-----------------------------------------------------------------------------
+//box-shadow: 9px 11px 2px 0px rgba(0,0,0,1);
 .welcome {
   background-color: $background-color;
   .title {
