--- a/dashboards/redneck.erb
+++ b/dashboards/redneck.erb
@@ -7,5 +7,11 @@
     <li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
       <div data-id="promo" data-view="Simpleyoutube" data-url="https://www.youtube.com/embed/w8faZ9LRors" data-hint="*time to nut up or shut up"></div>
     </li>
+    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="taskservice" data-view="Meter" data-title="Task Service" data-min="0" data-max="100"></div>
+    </li>
+    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
+      <div data-id="upstream" data-view="Meter" data-title="Upstream" data-min="0" data-max="100"></div>
+    </li>
   </ul>
 </div>
