[ci] Added started at and build url

--- a/widgets/ci/ci.scss
+++ b/widgets/ci/ci.scss
@@ -21,6 +21,11 @@ $ci-background:  darken($background-color, 15%);
   }
 
   .title {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
     color: $title-color;
   }
 
@@ -30,6 +35,11 @@ $ci-background:  darken($background-color, 15%);
 
   .updated-at {
     color: rgba(0, 0, 0, 0.3);
+  }
+
+  .start-at {
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.6);
   }
 
 }
