Impllement public sensative inforamtion configuration using setup module

--- a/dashboards/redneck.erb
+++ b/dashboards/redneck.erb
@@ -13,5 +13,11 @@
     <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="upstream" data-view="Ci" data-title="Upstream" data-min="0" data-max="100"></div>
     </li>
+    <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
+      <div data-id="taskservice_integration" data-view="Ci" data-title="Task Service Integration" data-min="0" data-max="100"></div>
+    </li>
+    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
+      <div data-id="upstream_integration" data-view="Ci" data-title="Upstream Integration" data-min="0" data-max="100"></div>
+    </li>
   </ul>
 </div>
