[ci-set] Introduce cartoon widget for ci job set checking

--- a/dashboards/redneck.erb
+++ b/dashboards/redneck.erb
@@ -1,23 +1,17 @@
 <% content_for :title do %>Redneck Dashboard<% end %>
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+    <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="welcome" data-view="Text" data-title="Redneck Monitor" data-text="Hell yeah! What the f*** are you looking for ?"></div>
     </li>
-    <li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
+    <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">
       <div data-id="promo" data-view="Simpleyoutube" data-url="https://www.youtube.com/embed/w8faZ9LRors" data-hint="*time to nut up or shut up"></div>
     </li>
-    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="taskservice" data-view="Ci" data-title="Task Service" data-min="0" data-max="100"></div>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="jenkins_job" data-view="Ci" data-title="Apache Jenkins Job" data-min="0" data-max="100"></div>
     </li>
-    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="upstream" data-view="Ci" data-title="Upstream" data-min="0" data-max="100"></div>
-    </li>
-    <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="taskservice_integration" data-view="Ci" data-title="Task Service Integration" data-min="0" data-max="100"></div>
-    </li>
-    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="upstream_integration" data-view="Ci" data-title="Upstream Integration" data-min="0" data-max="100"></div>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+      <div data-id="jenkins_job_set" data-view="Cicartoon" data-title="Apache Jenkins Job Set"></div>
     </li>
   </ul>
 </div>
