Update color. God damn monitor...

--- a/widgets/cicartoon/cicartoon.scss
+++ b/widgets/cicartoon/cicartoon.scss
@@ -4,8 +4,8 @@
 $background-color:  #4fc2f4;
 
 $title-color:       rgba(255, 255, 255, 0.7);
-$moreinfo-color:     #1f769a;
-$status-color:    #1f769a;
+$moreinfo-color:     #0A93AA;
+$status-color:    #0A93AA;
 
 
 // ----------------------------------------------------------------------------
