--- a/widgets/ci/ci.scss
+++ b/widgets/ci/ci.scss
@@ -38,6 +38,7 @@ $ci-background:  darken($background-color, 15%);
   }
 
   .start-at {
+    margin-top: -25px;
     font-size: 15px;
     color: rgba(0, 0, 0, 0.6);
   }
