--- a/widgets/simpleyoutube/simpleyoutube.scss
+++ b/widgets/simpleyoutube/simpleyoutube.scss
@@ -5,13 +5,15 @@
 $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
 .widget-simpleyoutube{
+    margin: 5px;
     iframe{
+        max-width: 90%;
         box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
     }
     .hint {
       font-size: 12px;
       color: $moreinfo-color;
       text-align: right;
-      padding-bottom: 5px;
+      padding: 0px 20px 5px 0px;
     }
 }
