--- a/widgets/simpleyoutube/simpleyoutube.scss
+++ b/widgets/simpleyoutube/simpleyoutube.scss
@@ -7,7 +7,8 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 .widget-simpleyoutube{
     margin: 5px;
     iframe{
-        max-width: 90%;
+        width: 650px;
+        height: 450px;
         box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
     }
     .hint {
