--- a/widgets/simpleyoutube/simpleyoutube.scss
+++ b/widgets/simpleyoutube/simpleyoutube.scss
@@ -5,16 +5,16 @@
 $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
 .widget-simpleyoutube{
-    margin: 5px;
+    padding-top: 0 !important;
+
     iframe{
-        width: 650px;
-        height: 450px;
-        box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
+        width: 690px;
+        height: 340px;
     }
     .hint {
-      font-size: 12px;
+      font-size: 2px;
       color: $moreinfo-color;
       text-align: right;
-      padding: 0px 20px 5px 0px;
+      display: none;
     }
 }
